Fixing Circle on Mobile

--- a/style.css
+++ b/style.css
@@ -172,7 +172,9 @@ a:hover {
     /* FOUND OUT WHY CIRCLE WAS BROKEN ON MOBILE (stackoverflow answer below)
     https://stackoverflow.com/questions/14270084/overflow-xhidden-doesnt-prevent-content-from-overflowing-in-mobile-browsers 
     */
-    margin-bottom: 183px;
+    margin-bottom: 80px;
+    position: relative;
+    /* The above 2 lines are currently fixing the broken circle on mobile */
 }
 
 .headshot-image {
@@ -227,7 +229,7 @@ a:hover {
     display: flex;
     width: 100%;
     margin-top: 200px;
-    margin-bottom: 183px;
+    margin-bottom: 300px;
 }
 
 /* .hero > div {
